--- a/index2.html
+++ b/index2.html
@@ -12,6 +12,6 @@ and open the template in the editor.
     </head>
     <body>
         <div>TODO write content</div>
-        <div>TODO write content</div>
+        <div>TODO write contents89484564654</div>
     </body>
 </html>
