--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,9 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+	
+	
+        <div>TODO write content1</div>
         <div>TODO write contents894845646542222</div>
     </body>
 </html>
